fix: fix alignment of black border in secondary nav

--- a/web/src/components/layout/nav/nav.css
+++ b/web/src/components/layout/nav/nav.css
@@ -288,6 +288,10 @@ header {
                         display: none;
                     }
                 }
+
+                & .black-border.logged-out {
+                    padding-top: 32.5px;
+                }
             }
 
             & .menu {
